[package]
name = "neos-session-scanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
tokio = { version = "^1.11.0", features = ["net", "macros", "rt", "time"] }
tokio-util = { version = "^0.6.8", features = ["net", "codec"] }
bytes = "^1.1.0"
futures = "^0.3.17"

[dev-dependencies]
hex = "^0.4.3"
